--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -105,7 +105,7 @@
     "* **[873/TCP: rsync](#rsync)**\n",
     "* **[1433/TCP: Microsoft SQL (ms-sql-s)](#ms_sql_s)**\n",
     "* **[3306/TCP: MySQL](#mysql)**\n",
-    "* **[3389/TCP: Microsoft Terminal Services](#msterminalservices)**\n",
+    "* **[3389/TCP: Microsoft Terminal Services (RDP)](#msterminalservices)**\n",
     "* **[6379/TCP: Remote Dictionary Server (Redis)](#redis)**\n",
     "* **[8009/TCP: AJP](#ajpproxyabuse)**\n",
     "* **[27017/TCP: MongoDB](#mongodb)**"
@@ -353,7 +353,8 @@
    "source": [
     "* **[Introduction to Active Directory](#introtoactivedir)**\n",
     "* **[Setup](#advmsetup)**\n",
-    "* **[Hardening Methods](#activedirhardeningmethods)**"
+    "* **[Hardening Methods](#activedirhardeningmethods)**\n",
+    "* **[Attacking Methodology](#activedirattackingmethodology)**"
    ]
   },
   {
@@ -487,7 +488,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **[Editing with Vi and Vim](#editingwithvi)**\n",
     "* **[Creating/Deleting User Accounts](#crdeluseraccountslinux)**\n",
     "* **[Managing Permissions and Sudo Users](#managingpermissionsandsudousers)**\n",
     "* **[Groups](#linuxgroups)**\n",
@@ -2449,9 +2449,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initial footholds via ms sql **require credentials** for a sql account on the machine. The following command can be used to login with impacket; the flag specifies Windows authentication:\n",
+    "Try brute forcing access, with a known user, list of potential users, known password, or list of potential passswords:\n",
     "```bash\n",
-    "python3 mssqlclient.py <UserID>@<Target IP> -windows-auth\n",
+    "hydra -l <user> -P <password_list> mssql://<IP Address> -t 4 -V\n",
+    "\n",
+    "```\n",
+    "Initial footholds via ms sql **require credentials** for a SQL account on the machine. The following command can be used to login with impacket; the flag specifies Windows authentication:\n",
+    "```bash\n",
+    "impacket-mssqlclient <UserID>@<Target IP> -windows-auth\n",
     "```\n",
     "* The User ID is typically a domain or username\n",
     "\n",
@@ -2524,17 +2529,15 @@
     "Before trying to exploit, ensure that SQL is installed on the local machine:\n",
     "```bash\n",
     "sudo apt update && sudo apt install mysql*\n",
+    "\n",
     "```\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "Try logging in as root to have the highest level of privileges on the system. If this doesn't work, then user credentials are required to access the DBMS. This can be brute forced or enumerated:\n",
+    "Try logging in as **root** (no password) to have the highest level of privileges on the system. If this doesn't work, then user credentials are required to access the DBMS. This can also be brute forced:\n",
     "```bash\n",
     "mysql -h <Target IP> -u <Username>\n",
+    "\n",
+    "hydra -l <user> -P <password_list> mysql://<IP Address> -t 4 -V\n",
+    "\n",
     "```\n",
-    "\n",
-    "<br>\n",
-    "\n",
     "Enumerate the DB and gather user credentials to access tha machine as a [non]privileged user:\n",
     "```bash\n",
     "1. MariaDB [(none)]> SHOW databases;\n",
@@ -2553,7 +2556,7 @@
    "source": [
     "<a id=\"msterminalservices\"></a>\n",
     "\n",
-    "### **`3389/TCP: Microsoft Terminal Services`**"
+    "### **`3389/TCP: Microsoft Terminal Services (RDP)`**"
    ]
   },
   {
@@ -2563,17 +2566,15 @@
     "Before accessing MS terminal services, **xfreerdp** must be installed on the attacking machine:\n",
     "```bash\n",
     "sudo apt-get install freerdp2-x11\n",
+    "\n",
+    "sudo apt-get install freerdp3\n",
+    "\n",
     "```\n",
-    "\n",
-    "<br>\n",
-    "\n",
     "The following command specifies the traget IP using the host machine;s login information as a guest. This essentially tests guest login capabilities. *Do NOT specify a password, just hit enter:*\n",
     "```bash\n",
     "xfreerdp /v:<Target IP>\n",
+    "\n",
     "```\n",
-    "\n",
-    "<br>\n",
-    "\n",
     "The following command ignores all security certificate usage and specifies a default account on the machine. This essentially bypasses the security certificate. If this port is open on a machine, it is clearly a Windows device, so default accounts would be user, admin, Administrator. Again, do not specify a password, just hit enter. If this command is successful, a remote Windows GUI will open:\n",
     "```bash\n",
     "xfreerdp /v:<Target IP> /cert:ignore /u:Administrator\n",
@@ -8264,6 +8265,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"activedirattackingmethodology\"></a>\n",
+    "\n",
+    "#### **`Attacking Methodology`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. Scan the Target System/Subnet** \n",
+    "\n",
+    "**2. Enumerate Domain(s)**\n",
+    "\n",
+    "**3. Enumerate Users & Password Policy**\n",
+    "\n",
+    "**4. Gain a Foothold on the Target Domain**\n",
+    "\n",
+    "**5. Enumerate the Domain Internally**\n",
+    "\n",
+    "**6. Escalate Privileges | Move Laterally to Pwn the Domain**\n",
+    "\n",
+    "**7. Gain Persistence | Dump NTDS.dit**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"activedirenumeration\"></a>\n",
     "\n",
     "### **`Initial Enumeration`**"
@@ -11505,36 +11534,6 @@
     "<a id=\"linuxintroos\"></a>\n",
     "\n",
     "### **`Introduction to Linux`**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"editingwithvi\"></a>\n",
-    "\n",
-    "#### **`Editing with Vi and Vim`**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vi and Vim are text editors that usually come preinstalled in the different Linux distributions. They are somewhat confusing to use at first, so the following briefly explains how to use them. It is important to remember that a relative or absolute path to the file works, but depending on the directory, sudo privileges may have to be enabled to write to a file. Also, if the file doesn't exist, Vi and Vim will create it with the specified name:\n",
-    "```bash\n",
-    "vi <File>\n",
-    "\n",
-    "vim <File>\n",
-    "```\n",
-    "\n",
-    "When starting Vi or Vim, the program is waiting for keyboard shortcuts to begin editing:\n",
-    "* **`i`:** Insert mode. This enables edits on the file. Once in insert mode, the file can be edited. To make more lines, go to the end of the last existing line and hit Enter. To leave insert mode, hit `Esc`. To **save** changes made in insert mode, hit Escape (leaving insert mode) and type **`:`**\n",
-    "\n",
-    "* **`:`** Various colon commands\n",
-    "   * **`:wq`:** Write changes and quit\n",
-    "\n",
-    "   * **`:q!`:** Force quit without saving any of the changes\n",
-    "\n"
    ]
   },
   {
