--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -8274,19 +8274,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. Scan the Target System/Subnet** \n",
+    "**1. Scan the Target System/Subnet:** This is crucial to identify live hosts, open ports, running services on the target network, and OS version(s)\n",
+    "   * If on the same LAN, use responder, wireshark, then nmap\n",
+    "   * If on a different LAN, use nmap\n",
     "\n",
-    "**2. Enumerate Domain(s)**\n",
+    "**2. Enumerate Domain(s):** Once live hosts are identified, shift focus to domain-related information\n",
+    "   * Use nmap, with a script on LDAP\n",
+    "   * ldapserch, dig, nslookup\n",
     "\n",
-    "**3. Enumerate Users & Password Policy**\n",
+    "**3. Enumerate Users:** Gather domain users, groups and privileged accounts\n",
+    "   * Use kerbrute, metasploit, rpcclient, enum4linux\n",
+    "   * Create a word list for potential users based on previous enumeration or OSINT\n",
+    "   * Impacket-NPUsers for later ASREPRoasting\n",
     "\n",
-    "**4. Gain a Foothold on the Target Domain**\n",
+    "**4. Enumerate Password Policy:** Enables brute-forcing and password spraying\n",
+    "   * Use CME, check SMB NULL sessions & LDAP anonymous binds, enum4linux\n",
     "\n",
-    "**5. Enumerate the Domain Internally**\n",
+    "**5. Gain a Foothold on the Target Domain:** Leverage identified vulnerabilities/misconfigurations to gain initial access, or try a common tactic\n",
+    "   * If on the same network as the AD environment, try LLMNR attacks, SMB relay, and the mentioned IPv6 attack\n",
+    "   * Password spray with enumerated accounts\n",
+    "   * If there is web app access, try common web app attacks\n",
+    "      * If there is an upload page on the site, try to upload a malicious shell\n",
+    "   * Abuse CVEs like zerologon; this is why the target system/subnet should be scanned\n",
     "\n",
-    "**6. Escalate Privileges | Move Laterally to Pwn the Domain**\n",
+    "**6. Enumerate the Domain Internally:** Identify high-value targets and paths to privilege escalation\n",
+    "   * Get a complete listing of users and groups, available shares, logged in users, other devices to pivot to\n",
+    "   * Security controls, ACLs, domain trusts, relationships, and privileged accounts, misconfigurations\n",
+    "   * BloodHound, SharpHound LDAPDomainDump, CME\n",
+    "   * Net commands, PowerView, ActiveDirectory module, native Windows commands\n",
     "\n",
-    "**7. Gain Persistence | Dump NTDS.dit**"
+    "**7. Escalate Privileges | Move Laterally to Pwn the Domain:** Obtain administrative privileges and access sensitive systems/data\n",
+    "   * Kerberoasting (Rubeus), ASREPRoasting, token impersonation, GPP & pass attacks, secretsdump (impacket suite)\n",
+    "   * Find more cleartext credentials (Mimikatz: sekurlsa)\n",
+    "   * CVEs like PrintNightmare, noPAC, PetitPotam\n",
+    "   * Abuse enumerated ACL, GPO, and trust misconfigs\n",
+    "\n",
+    "**8. Gain Persistence** Extract all domain credentials (NTLM hashes, Kerberos tickets) and maintain long-term access to the domain\n",
+    "   * Dump NTDS.dit \n",
+    "   * Golden Ticket"
    ]
   },
   {
@@ -8417,12 +8442,13 @@
     "```\n",
     "`nmap` should be one of the initial scans when conducting a penetration test. As known, this can determine what services each host is running, identify critical hosts such as domain controllers and web servers, and identify potentially vulnerable hosts to probe later. Because the focus is on AD, after doing a broad sweep, it would be a good idea to focus on standard protocols typically seen accompanying AD services, such as **DNS, SMB, LDAP, Kerberos,** etc.\n",
     "```bash\n",
-    "sudo nmap -v -A x.x.x.x    #single host\n",
-    "sudo nmap -v -A -iL hosts.txt    #list of hosts\n",
-    "\n",
+    "sudo nmap -T4 -A -v -Pn  x.x.x.x    #single host\n",
+    "sudo nmap -T4 -A -v -Pn -iL hosts.txt    #list of hosts\n",
     "```\n",
-    "From this output, the naming standard used by NetBIOS, DNS, and the domain controller should be obtained, as well as open ports and running services. The domain controller is often the DNS_Domain_Name; this can be confirmed by looking at the final portion of the DNS_Computer_Name. \n",
-    "\n",
+    "From this output, the naming standard used by NetBIOS, DNS, and the domain controller should be obtained, as well as open ports and running services. Under LDAP, the **rootDomainNamingContext** attribute discloses the name of the root domain, the **defaultNamingContext** attribute discloses the distinguished name of the particular domain controller (this may be a child domain), and the hostname (computer name) of the device is the first value in the **dnsHostName** attribute. To see this better, run the following command:\n",
+    "```bash\n",
+    "nmap -sT -Pn -n --open x.x.x.x -p389 --script ldap-rootdse\n",
+    "```\n",
     "It is also crucial to look at the OS used, as it could be vulnerable to older exploits. Regardless, the results of these scans will point the attacker to where they should start looking for potential domain enumeration avenues. It is important to find a way to a domain user account or SYSTEM level access on a domain-joined host, so that a foothold can be obtained. \n",
     "\n",
     "At this point, the domains and running services should be known, so those servers should be polled and users should be enumerated. \n",
@@ -8452,11 +8478,13 @@
     "```\n",
     "From the output, users will be validated in the domain. These results can be put in a file to use in targeted password spraying attacks. \n",
     "\n",
+    "To make this process easier, the `auxiliary/scanner/smb/smb_lookupsid` and `auxiliary/gather/kerberos_enumusers` modules can be used in msfconsole. \n",
+    " \n",
     "<br>\n",
     "\n",
     "**<u>Identifying Potential Vulnerabilities</u>**\n",
     "\n",
-    "The local system account `NT AUTHORITY\\SYSTEM` is a built-in account in Windows OSs. It has the highest level of access in the OS and is used to run most Windows services. It has the highest level of access in the OS and is used to run most Windows services. It is also common for third-party services to run in the context of this account by default. A SYSTEM account on a domain-joined host will be able to enumerate AD by impersonating the computer account, which is essentially just another kind of user account. Having SYSTEM-level access within a domain environment is nearly equivalent to having a domain user account. \n",
+    "The local system account `NT AUTHORITY\\SYSTEM` is a built-in account in Windows OSs. It has the highest level of access in the OS and is used to run most Windows services. It is also common for third-party services to run in the context of this account by default. A SYSTEM account on a domain-joined host will be able to enumerate AD by impersonating the computer account, which is essentially just another kind of user account. Having SYSTEM-level access within a domain environment is nearly equivalent to having a domain user account. \n",
     "\n",
     "There are several ways to gain SYSTEM-level access on a host, including but not limited to:\n",
     "* Remote Windows exploits such as MS08-067, EternalBlue, or BlueKeep\n",
